fix: known-gaps 清零——安全收紧、SWA 断链、ReAct 遗留、溯源持久化、trace/词映射落地
安全(P0):
- SecurityConfig /api/** 默认认证，admin 角色隔离，refresh 校验 type claim，/chat/stream 补 KB 权限
- ReAct QUERY_DATABASE 只读护栏：SELECT-only + 表白名单 + 行数/超时上限

检索(P1):
- SWA metadata 断链修复：Milvus schema/ES/RetrievalResult 全链透传，
  Auto-Merging 与 Sentence Window 真实生效（含 6 个回归测试；旧集合启动时自动重建，需重灌语料）
- rerank 静默回退可观测（rerank_fallback_total 指标）+ top_n 分数混排修复
- 检索上下文 token 预算（retrieval.context-max-tokens）

流水线(P1/P2):
- Kafka 消费者 @Transactional 真实生效（去 this.doProcess 自调用），
  无 chunks 置 FAILED 终态，容器重试 ErrorHandler，producer 失败指标
- 上传分块参数接通（此前传空 Map 全部无效）

ReAct 遗留清零:
- 降级回退真实 RAG 链路（不再把执行摘要当答案）
- RETRIEVE 动作携带 sources，ReAct 分支可溯源
- LoopDetector 执行级状态隔离；ActionCache TTL + 容量上限

溯源与功能落地:
- 流式 finish 事件携带 sources + 前端引用来源面板
- t_message.sources 持久化，历史会话回显引用
- trace 体系：仓储 + RagContextService 步骤级记录 + traces 接口真实数据
- 词映射/意图树 CRUD API 落地，QueryTermService 术语归一化接入检索管线

验证: 后端编译通过，6 测试类 32 用例全绿，前端构建通过